--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,69 @@
+@import url("./fonts/stylesheet.css");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,700;1,700&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "CoFo Sans", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  --bg-grey: #ECECEC;
+  --color-white: #FFFFFF;
+  --color-red: #E02725;
+  --color-lightRed: #FFE3E2;
+  --color-green: #00823C;
+  --color-darkBlue: #122A4E;
+  --color-blue: #1B3D6D;
+  --color-lightBlue: #DFE6EF;
+  --color-yellow: #FEBD01;
+  --color-lightYellow: #FFF2CC;
+  --color-miamie: #08AFDC;
+  --color-lightMiamie: #D6F6FE;
+
+  --scrollbar-track-color: #ECECEC;
+  --scrollbar-color: #FFE3E2;
+  --scrollbar-width: 2px;
+
+  --scrollbar-size: .375rem;
+  --scrollbar-minlength: 1.5rem;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.scroll__elem {
+  overflow: auto;
+  scrollbar-width: var(--scrollbar-width);
+  scrollbar-color: var(--scrollbar-color) var(--scrollbar-track-color);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.scroll__elem::-webkit-scrollbar {
+  height: var(--scrollbar-size);
+  width: var(--scrollbar-size);
+
 }
 
-button {
+.scroll__elem::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track-color);
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+.scroll__elem::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-color);
+  border-radius: 8px;
+  /* Если нужно - добавьте :hover и:active */
+}
+
+.scroll__elem::-webkit-scrollbar-thumb:vertical {
+  min-height: var(--scrollbar-minlength);
+}
+
+.scroll__elem::-webkit-scrollbar-thumb:horizontal {
+  min-width: var(--scrollbar-minlength);
+}
+
+.scroll__elem.row:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+@supports (scrollbar-width: auto) {
+  .scroll__elem {
+    scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
+    scrollbar-width: var(--scrollbar-width);
   }
 }
