feat: style for screen4

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --color-lightYellow: #FFF2CC;
   --color-miamie: #08AFDC;
   --color-lightMiamie: #D6F6FE;
+  --color-grey: #B3B3B3;
 
   --scrollbar-track-color: #ECECEC;
   --scrollbar-color: #FFE3E2;
