--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--bg-grey);
 }
 
 .container {
@@ -29,4 +30,93 @@
     max-width: 600px;
     border: 5px solid var(--color-red);
   }
+}
+
+.wrapper {
+  padding: 16px;
+}
+
+.btn {
+  width: 100%;
+  border-radius: 8px;
+  background: var(--color-red);
+  color: var(--color-white);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 11px;
+  cursor: pointer;
+}
+
+.btn_grey {
+  background: var(--color-grey)
+}
+
+/* 
+/=======SCREEN4========/ */
+
+.head {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+}
+
+.img__sheet {
+  margin-top: -20px;
+  width: 110px;
+}
+
+.sections {
+  border-radius: 8px;
+  background: var(--color-darkBlue);
+  padding: 20px 26px;
+  position: relative;
+}
+
+.sections::before {
+  content: url("./assets/tomato.png");
+  position: absolute;
+  top: -13px;
+  left: -16px;
+}
+
+.sections::after {
+  content: url("./assets/4sheet-section.png");
+  position: absolute;
+  right: -16px;
+  bottom: 5px;
+}
+
+
+.section__item {
+  color: var(--color-white);
+  font-size: 18px;
+  line-height: 10px;
+  padding: 14px 0px;
+  position: relative;
+  font-weight: 500;
+  text-align: center;
+}
+
+.section__item:first-child {
+  padding-top: 0px;
+}
+
+.section__item:last-child {
+  padding-bottom: 0px;
+}
+
+.section__item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 1px;
+  background: #415571;
 }
