--- a/src/App.css
+++ b/src/App.css
@@ -79,17 +79,26 @@
 }
 
 .sections::before {
-  content: url("./assets/tomato.png");
+  content: "";
+  background-image: url("./assets/tomato.png");
+  background-size: cover;
   position: absolute;
-  top: -13px;
+  top: -18px;
   left: -16px;
+  width: 80px;
+  height: 125px;
 }
 
 .sections::after {
-  content: url("./assets/4sheet-section.png");
+  content: "";
+  background-image: url("./assets/4sheet-section.png");
+  background-size: cover;
   position: absolute;
-  right: -16px;
-  bottom: 5px;
+  right: -19px;
+  bottom: 1px;
+  width: 54px;
+  height: 80px;
+  z-index: 3;
 }
 
 
@@ -119,4 +128,89 @@
   width: 100%;
   height: 1px;
   background: #415571;
+}
+
+.answers {
+  margin-top: 26px;
+}
+
+.answers__row {
+  display: flex;
+  gap: 6px;
+}
+
+.answers__row>* {
+  flex-grow: 2;
+}
+
+.answers__row:not(:last-child) {
+  margin-bottom: 6px;
+}
+
+.answers__row:last-child {
+  margin-bottom: 12px;
+}
+
+.answer__item {
+  background: var(--color-white);
+  color: var(--color-darkBlue);
+  padding: 7.5px 7.5px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 8px;
+  box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.16);
+  background: rgb(255, 255, 255);
+  height: 43px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 97%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.section__item.check,
+.section__item.answer:hover {
+  color: var(--color-miamie);
+
+}
+
+.section__item.answer {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.section__item.answer span {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 8px;
+}
+
+.section__item.answer span::before {
+  content: url("./assets/4arrow.svg");
+  color: var(--color-miamie);
+  opacity: .8;
+  transform: rotate(180deg);
+
+}
+
+.section__item.answer span::after {
+  content: url("./assets/4arrow.svg");
+  color: var(--color-miamie);
+  opacity: .8;
+  margin-top: -1px;
+
+}
+
+.section__item.answer:hover span::before {
+  content: url("./assets/4arrow-2.svg");
+}
+
+.section__item.answer:hover span::after {
+  content: url("./assets/4arrow-2.svg");
 }
