--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,24 @@
   display: flex;
   align-items: start;
   justify-content: space-between;
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  width: calc(100% - 32px);
+}
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper__section {
+  margin-top: 75px;
+  flex-shrink: 0;
+  flex-grow: 2;
 }
 
 .img__sheet {
@@ -176,11 +194,13 @@
   justify-content: center;
 }
 
-.answer__item:active {
-  opacity: 1;
+
+.answer__item.none {
+  opacity: 0;
 }
 
 .section__item.check,
+.section__item.hover,
 .section__item.answer:hover {
   color: var(--color-miamie);
 
