--- a/src/App.css
+++ b/src/App.css
@@ -271,12 +271,7 @@
   opacity: 0;
 }
 
-.cursor {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  background: url("./assets/cursor.svg")
-}
+
 
 .facke__elem.sectionItem {
   color: var(--color-miamie);
@@ -333,4 +328,58 @@
 .answersError,
 .errorBtn {
   opacity: 0;
+}
+
+.modal__start {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: calc(100% - 32px);
+}
+
+.stopGame {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+
+
+.facke__elem.animation {
+  width: var(--fackeWidth);
+  height: var(--fackeHeight);
+  top: var(--fackeTop);
+  left: var(--fackeLeft);
+  z-index: 99;
+
+}
+
+.cursor {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background: url("./assets/cursor.svg");
+  right: -9px;
+  bottom: -16px;
+  z-index: 99;
+}
+
+.facke__elem.sectionItem .cursor {
+  right: 8px;
+  bottom: -12px;
+}
+
+.facke__elem.transition {
+  transition: 1s ease-in-out;
+}
+
+.facke__elem.facke__elem.transitionFast {
+  transition: .5s ease-in-out;
+}
+
+.facke__elem.cursorHere .cursor {
+  bottom: -4px;
 }
