--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   line-height: 1.5;
   font-weight: 500;
   --bg-grey: #ECECEC;
+  --bg-root: #F6F6F6;
   --color-white: #FFFFFF;
   --color-red: #E02725;
   --color-lightRed: #FFE3E2;
