feat: style for test1

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -15,6 +15,6 @@
     text-align: center;
 }
 
-.modal__text.border {
+.modal.border .modal__text {
     border: 1px solid var(--color-darkBlue);
 }
