--- a/src/components/Test/Test.module.css
+++ b/src/components/Test/Test.module.css
@@ -46,11 +46,19 @@
 
 }
 
-.inputRadio:checked~.label,
-.inputRadio1:checked~.label1,
-.inputRadio2:checked~.label2,
-.inputRadio3:checked~.label3,
-.inputRadio4:checked~.label4 {
+.inputRadio:checked~label {
     border: 1px solid var(--color-darkBlue);
 
+}
+
+.inputRadio:checked~label.error {
+    border: 1px solid transparent;
+}
+
+.inputRadio:checked~label.error {
+    color: var(--color-red);
+}
+
+.inputRadio:checked~label.success {
+    color: var(--color-green);
 }
