--- a/src/components/TestMultiple/TestMultiple.module.css
+++ b/src/components/TestMultiple/TestMultiple.module.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    margin-top: 16px;
+    margin-bottom: 20px;
 }
 
 .inputRadio {
@@ -21,6 +23,7 @@
     box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.16);
     background: rgb(255, 255, 255);
     cursor: pointer;
+    border: 1px solid transparent;
 }
 
 .answer__wrapper {
@@ -56,6 +59,15 @@
 
 .inputCheck:checked~label .square {
     background-color: var(--color-darkBlue);
+}
+
+.inputCheck:checked~label .answers__item {
+    border: 1px solid var(--color-darkBlue);
+}
+
+.inputCheck:checked~label.error .answers__item,
+.inputCheck:checked~label.success .answers__item {
+    border: 1px solid transparent;
 }
 
 .inputCheck:checked~label.error .square {
