feat: task full

--- a/src/screens/Screen5Info/Screen5.module.css
+++ b/src/screens/Screen5Info/Screen5.module.css
@@ -257,3 +257,8 @@ img.photo {
 .section.check .personInfo .section__head {
     text-align: left;
 }
+
+.btn {
+    position: relative;
+    z-index: 2;
+}
