feat: add screen1:

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --color-blue: #1B3D6D;
   --color-lightBlue: #DFE6EF;
   --color-yellow: #FEBD01;
+  --color-yellowBg: #FEBE42;
   --color-lightYellow: #FFF2CC;
   --color-miamie: #08AFDC;
   --color-lightMiamie: #D6F6FE;
