--- a/src/App.css
+++ b/src/App.css
@@ -106,5 +106,5 @@ body::after {
   height: 0;
   overflow: hidden;
   z-index: -1;
-  content: url("./assets/bg-items/3circle.svg") url("./assets/bg-items/3sheet-1.png") url("./assets/bg-items/3sheet-2.png") url("./assets/bg-items/3star.svg") url("./assets/bg-items/3star-2.svg") url("./assets/bg-items/3tomato-2.png") url("./assets/bg-items/3tomato.png") url("./assets/bg-items/6circle-2.svg") url("./assets/bg-items/6circle.svg") url("./assets/bg-items/6sheet-1.png") url("./assets/bg-items/6sheet-2.png") url("./assets/bg-items/6tomato-1.png") url("./assets/bg-items/6tomato-2.png") url("./assets/bg-items/bg-sheetUpRight.png") url("./assets/bg-items/bg-tomato.png")
+  content: url("./assets/bg-items/3circle.svg") url("./assets/bg-items/3sheet-1.png") url("./assets/bg-items/3sheet-2.png") url("./assets/bg-items/3star.svg") url("./assets/bg-items/3star-2.svg") url("./assets/bg-items/3tomato-2.png") url("./assets/bg-items/3tomato.png") url("./assets/bg-items/6circle-2.svg") url("./assets/bg-items/6circle.svg") url("./assets/bg-items/6sheet-1.png") url("./assets/bg-items/6sheet-2.png") url("./assets/bg-items/6tomato-1.png") url("./assets/bg-items/6tomato-2.png") url("./assets/bg-items/bg-sheetUpRight.png") url("./assets/bg-items/bg-tomato.png") url("./assets/personsInfo/1.png")
 }
