--- a/src/screens/Screen1/Screen1.module.css
+++ b/src/screens/Screen1/Screen1.module.css
@@ -110,8 +110,11 @@
     background-color: var(--color-miamie);
     border-radius: 8px;
     display: flex;
+    display: -webkit-flex;
     align-items: end;
     justify-content: end;
+    -webkit-justify-content: flex-end;
+    -webkit-align-items: flex-end;
     width: 100%;
     height: 100%;
     overflow: hidden;
