--- a/src/screens/Screen4/Screen4.module.css
+++ b/src/screens/Screen4/Screen4.module.css
@@ -33,7 +33,7 @@
 }
 
 .wrapper__section {
-    margin-top: 75px;
+    margin-top: 70px;
     flex-shrink: 0;
     flex-grow: 2;
     position: relative;
@@ -174,7 +174,7 @@
 }
 
 
-.section__item span::after {
+.section__item span::before {
     content: url("../../assets/4arrow.svg");
     color: var(--color-miamie);
     opacity: 0;
