--- a/src/screens/Screen4/Screen4.module.css
+++ b/src/screens/Screen4/Screen4.module.css
@@ -334,3 +334,8 @@
 .facke__elem.cursorHere .cursor {
     bottom: -4px;
 }
+
+.section__item.modalAnswer span::after,
+.section__item.modalAnswer span::before {
+    opacity: 0;
+}
