fix: add scroll for user3

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -15,6 +15,10 @@
     text-align: center;
 }
 
+.fontText {
+    font-size: 12px;
+}
+
 .modal.border .modal__text {
     border: 1px solid var(--color-darkBlue);
 }
