--- a/src/components/TestMultiple/TestMultiple.module.css
+++ b/src/components/TestMultiple/TestMultiple.module.css
@@ -115,5 +115,7 @@
 }
 
 .modalStart {
-    top: calc(50% + calc(var(--top) / 2))
+    position: fixed;
+
+    top: calc(50% + (max(var(--top), 1px) / 2));
 }
