fix: style tomato for screen9

--- a/src/screens/Screen9/Screen9.module.css
+++ b/src/screens/Screen9/Screen9.module.css
@@ -140,3 +140,9 @@
     transform: rotate(-20deg);
     background-position: bottom -61px right 82px;
 }
+
+@media screen and (min-width: 600px) {
+    .wrapper::before {
+        top: 78px;
+    }
+}
