--- a/src/screens/Screen5Info/Screen5.module.css
+++ b/src/screens/Screen5Info/Screen5.module.css
@@ -258,11 +258,6 @@ img.photo {
     text-align: left;
 }
 
-.btn {
-    margin-top: 16px;
-    position: relative;
-    z-index: 2;
-}
 
 .section.check .personPhoto .section__head,
 .section.check .personInfo .section__head {
@@ -282,3 +277,38 @@ img.photo {
     align-items: center;
 
 }
+
+.blur {
+    position: sticky;
+    bottom: 0;
+    width: calc(100% - 32px);
+    height: 120px;
+    margin: auto;
+    z-index: 2;
+    background: linear-gradient(0.00deg, rgb(246, 246, 246), rgba(246, 246, 246, 0.5) 38.5%, rgba(246, 246, 246, 0.3) 79.5%, rgba(246, 246, 246, 0) 100%);
+    display: flex;
+    align-items: end;
+    -webkit-align-items: end;
+    justify-content: center;
+}
+
+.btn {
+    margin-bottom: 40px;
+    width: 100%;
+    background-color: var(--color-darkBlue)
+}
+
+/* .section__item.inView {
+    position: relative;
+}
+
+.section__item.inView::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, transparent 0%, rgba(255, 255, 255, .7) 20% 80%, transparent 100%);
+    border-radius: 8px 8px 0px 0px;
+} */
