--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   width: 100%;
   overflow: hidden;
   position: relative;
-  --top: 0;
+  --top: 0px;
 }
 
 @media screen and (min-width: 600px) {
