--- a/src/screens/Screen5Info/Screen5.module.css
+++ b/src/screens/Screen5Info/Screen5.module.css
@@ -250,6 +250,7 @@ img.photo {
 }
 
 .wrapper {
+    overflow: hidden;
     min-height: 100%;
 }
 
@@ -295,6 +296,13 @@ img.photo {
     margin-bottom: 40px;
     width: 100%;
     background-color: var(--color-darkBlue)
+}
+
+.wrapper {
+    background-image: url("../../assets/bg-items/bg-sheetUpRight.png"), url("../../assets/bg-items/bg-tomato.png"), url("../../assets/bg-items/5bg-star.svg"), url("../../assets/bg-items/5bg-circle.svg"), url("../../assets/bg-items/5bg-circle2.svg");
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+    background-size: 94px, 116px, auto, auto, auto;
+    background-position: top 562px left -13px, top 352px right -52px, top right, top 225px left, top 489px right;
 }
 
 /* .section__item.inView {
