--- a/src/components/BtnSlider/BtnSlider.module.css
+++ b/src/components/BtnSlider/BtnSlider.module.css
@@ -23,3 +23,11 @@
     width: 100px;
 
 }
+
+@media (min-width: 600px) and (max-height: 713px) {
+    .buttons {
+        margin-top: -15px;
+    }
+
+
+}
