--- a/src/screens/Screen2/Screen2.module.css
+++ b/src/screens/Screen2/Screen2.module.css
@@ -21,3 +21,18 @@
     transform: translateX(-50%) translateY(-50%);
     width: 100%;
 }
+
+@media (min-width: 600px) and (max-height: 725px) {
+    .carusel {
+        top: 49px;
+        transform: translateX(-50%) translateY(0%);
+    }
+
+}
+
+@media (min-width: 600px) and (max-height: 713px) {
+    .btn {
+        margin-top: 14px;
+    }
+
+}
