--- a/src/screens/Screen4/Screen4.module.css
+++ b/src/screens/Screen4/Screen4.module.css
@@ -343,3 +343,11 @@
 .section__item.success {
     color: var(--color-green);
 }
+
+@media (max-width:374px) {
+    .sections {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+}
