--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@
   --top: 0px;
 }
 
+.screen1 {
+  height: auto;
+}
+
 @media screen and (min-width: 600px) {
   #root {
     padding: 2.5vh 0 2.5vh 0;
