--- a/src/screens/Screen1/Screen1.module.css
+++ b/src/screens/Screen1/Screen1.module.css
@@ -7,7 +7,7 @@
 
     padding: 16px;
     overflow: hidden;
-    min-height: 690px;
+
 
 }
 
@@ -67,6 +67,7 @@
     background-color: var(--color-yellowBg);
     display: flex;
     align-items: end;
+    -webkit-align-items: flex-end;
     justify-content: center;
     border-radius: 8px;
     width: 100%;
@@ -178,5 +179,18 @@
 
     .line {
         top: 0
+    }
+}
+
+
+@media screen and (min-width: 600px) and (max-height: 700px) {
+    .wrapper {
+        grid-gap: 10px;
+        padding: 10px;
+        min-height: 598px;
+    }
+
+    .sectionInfo {
+        padding-top: 10px;
     }
 }
