--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,11 @@
   --top: 0px;
 }
 
-.screen1 {
-  height: auto;
+@media (max-width: 600px) {
+  .screen1 {
+    height: 100vh;
+  }
+
 }
 
 @media screen and (min-width: 600px) {
