--- a/src/screens/Screen1/Screen1.module.css
+++ b/src/screens/Screen1/Screen1.module.css
@@ -194,3 +194,15 @@
         padding-top: 10px;
     }
 }
+
+@media screen and (min-width: 600px) and (min-height: 900px) {
+
+    .text {
+        font-size: 2.6vh;
+        line-height: 120%;
+    }
+
+    .btn {
+        font-size: 1.2em;
+    }
+}
