fix: text in final screens

--- a/src/screens/Screen9/Screen9.module.css
+++ b/src/screens/Screen9/Screen9.module.css
@@ -50,6 +50,7 @@
     font-weight: 500;
     line-height: 23px;
     text-align: center;
+
 }
 
 
@@ -57,12 +58,12 @@
 
 
 .text:nth-child(2) {
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .link {
     margin-top: 16px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     position: relative;
 }
 
@@ -145,4 +146,24 @@
     .wrapper::before {
         top: 78px;
     }
+}
+
+.textLink {
+    color: inherit;
+    text-decoration: none;
+    position: relative;
+    z-index: 990;
+}
+
+.textLink::before {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    width: 100%;
+    height: 1px;
+    background-color: #fff;
+}
+
+.text2 {
+    margin-top: 40px !important;
 }
